test/bad/c_cpp/MLE(more than 100MB).cpp
#include <cstdio>
#include <cstring>


int a[100000000];
int main() {

	return 0;
}